--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pomodoro Timer</title>
+    <title>Transcriber</title>
     <link rel="manifest" href="/assets/manifest.json" />
     <meta name="theme-color" content="#111827" />
     <link rel="stylesheet" href="https://wdn.homebots.io/tailwind.css" />
