chore: cosmetic changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Transcriber</title>
     <link rel="manifest" href="/assets/manifest.json" />
-    <meta name="theme-color" content="#111827" />
+    <meta name="theme-color" content="#53ac6f" />
     <link rel="stylesheet" href="https://wdn.homebots.io/tailwind.css" />
   </head>
   <body>
