chore: refactor with lithium

--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,14 @@
     <script type="importmap">
       {
         "imports": {
-          "@lithium/": "https://--lithium.static.apphor.de/",
-          "@sodium/": "https://--sodium.static.apphor.de/",
-          "@lucide/": "https://--lucide.static.apphor.de/"
+          "@lithium/": "https://--lithium.static.apphor.de/"
         }
       }
     </script>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/main.ts"></script>
+    <script type="module" src="/main.mjs"></script>
     <style>
       .bg-darker {
         background-color: #428958;
