fix: update index file

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
   <link rel="stylesheet"
     href="https://wdn.homebots.io/tailwind.css" />
   <script type="importmap">
-      {
-        "imports": {
-          "@li3/": "https://cdn.li3.dev/@li3/"
-        }
-      }
-    </script>
+  {
+    "imports": {
+      "@li3/": "https://cdn.li3.dev/@li3/"
+    }
+  }
+  </script>
+  <script src="https://cdn.li3.dev/@li3/web"></script>
 </head>
 
 <body>
