fix: update index file

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 
 <body>
-  <transcriber></transcriber>
-  <template component="transcriber">
+  <template app>
+    <script setup src="/main.mjs"></script>
     <div class="flex flex-col items-center justify-center h-screen bg-primary text-white">
       <div class="max-w-md w-full space-y-8">
         <div class="text-center">
@@ -107,8 +107,7 @@
         </div>
       </div>
     </div>
-    <script setup
-      src="/main.mjs"></script>
+
   </template>
 
   <style>
