--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
   }
   </script>
-  <script src="https://cdn.li3.dev/@li3/web"></script>
+  <script type="module" src="https://cdn.li3.dev/@li3/web"></script>
 </head>
 
 <body>
