--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="flex items-center justify-between space-x-4">
                 <button on-click="onPlayPause()"
                   class="text-white py-3 px-8 rounded-full bg-darker text-center">
-                  <template if="playing"
+                  <template if="playing">
                     <svg
                     xmlns="http://www.w3.org/2000/svg"
                     height="24"
